syntax = "proto3";

package j5.ext.v1;

import "google/protobuf/descriptor.proto";
import "j5/auth/v1/method.proto";
import "j5/ext/v1/query_annotations.proto";
import "j5/schema/v1/schema.proto";
import "j5/bcl/v1/spec.proto";

option go_package = "github.com/pentops/j5/gen/j5/ext/v1/ext_j5pb";

option (j5.ext.v1.package).string_formats = {
    name: "kebab-case",
    regex: "^[a-z0-9]+(-[a-z0-9]+)*$",
    description: "Lowercase words separated by hyphens, e.g. 'my-string'."
};

extend google.protobuf.FileOptions {
  PackageOptions package = 555101;
}

message PackageOptions {
  repeated StringFormat string_formats = 1;
}

message StringFormat {
  string name = 1;
  string regex = 2;
  string description = 3;
}

extend google.protobuf.MessageOptions {
  PSMOptions psm = 555101;
}

message PSMOptions {
  string entity_name = 1;

  // if not set, will be inferred from the message name, e.g. FooKeys is KEYS
  optional schema.v1.EntityPart entity_part = 2;
}

extend google.protobuf.FieldOptions {
  schema.v1.EntityKey key = 555101;
}

extend google.protobuf.ServiceOptions {
  ServiceOptions service = 555101;
}

message ServiceOptions {
  oneof type {
    StateQuery state_query = 1;
    StateCommand state_command = 2;
  }

  message StateQuery {
    string entity = 1;
  }

  message StateCommand {
    string entity = 1;
  }

  j5.auth.v1.MethodAuthType default_auth = 10;

  repeated string audience = 20;
}

extend google.protobuf.MessageOptions {
  MessageOptions message = 555000;
}

message MessageOptions {
  // Use instead of comment descriptions for documentation
  string description = 2;

  oneof type {
    ObjectMessageOptions object = 10;
    OneofMessageOptions oneof = 11;
    PolymorphMessageOptions polymorph = 12;
  }
}

message ObjectMessageOptions {
  repeated string polymorph_member = 3;
}

message OneofMessageOptions {
}

message PolymorphMessageOptions {
  // list of fully qualified proto names of the types that are allowed to be
  // used in this polymorphic field.
  repeated string members = 1;
}

/*
extend google.protobuf.OneofOptions {
  OneofOptions oneof = 555000;
}

message OneofOptions {
  // When true, the oneof is exposed as a field in the parent message, rather
  // than being a validation rule.
  // Will show in json-schema as an object with the x-oneof flag set.
  bool expose = 1;

  FilteringConstraint filtering = 10;
}*/

extend google.protobuf.MethodOptions {
  MethodOptions method = 555000;
}

message MethodOptions {
  string label = 1;
  bool hidden = 2;

  StateQueryMethodOptions state_query = 10;
  j5.auth.v1.MethodAuthType auth = 20;
}

message StateQueryMethodOptions {
  bool get = 1;
  bool list = 2;
  bool list_events = 3;
}

extend google.protobuf.EnumOptions {
  EnumOptions enum = 555000;
}

message EnumOptions {
  // bool inline = 1;
  bool no_default = 2; // Disallows the default 0 value.

  repeated EnumInfoField info_fields = 10;
}

message EnumInfoField {
  string name = 1; // key in the map of each option
  string label = 2; // user friendly name
  string description = 3; // longer text description
}

extend google.protobuf.EnumValueOptions {
  EnumValueOptions enum_value = 555000;
}

message EnumValueOptions {
  // Use instead of comment descriptions for documentation
  string description = 2;

  map<string, string> info = 10;
}

extend google.protobuf.FieldOptions {
  FieldOptions field = 555000;
}

// Field Type matching j5.schema.v1.Field types, these indicate the type more
// directly, and will eventually hold all of the options from the other
// annotation libraries (validate and list)
message FieldOptions {
  // Use instead of comment descriptions for documentation
  string description = 2;

  oneof type {
    AnyField any = 9;
    ObjectField object = 10;
    EnumField enum = 11;
    OneofField oneof = 12;
    PolymorphField polymorph = 13;

    j5.schema.v1.MapField.Ext map = 20;
    j5.schema.v1.ArrayField.Ext array = 21;

    StringField string = 30;
    IntegerField integer = 31;
    FloatField float = 32;
    BoolField bool = 33;
    BytesField bytes = 34;
    DecimalField decimal = 35;
    DateField date = 36;
    TimestampField timestamp = 37;
    KeyField key = 38;
  }
}


// AnyField is valid for j5.types.embed.v1.Any and google.protobuf.Any
message AnyField {
}

message ObjectField {
  // When true, the fields of the child message are flattened into the parent
  // message, overriding this to not be an object in the client schemas.
  bool flatten = 1;
}

message EnumField {}

message OneofField {}

message PolymorphField {}

message MapField {
  // The name of the singular form of the map pairs, used in documentation and
  // block parsing.
  optional string single_form = 3;
}

message ArrayField {
  // The name of the singular form of the array item, used in documentation and
  // block parsing.
  optional string single_form = 3;
}

message StringField {}

message IntegerField {
  Rules rules = 1;
  message Rules {
    optional int64 minimum = 1;
    optional int64 maximum = 2;
    optional bool exclusive_minimum = 3;
    optional bool exclusive_maximum = 4;
  }
}

message FloatField {}

message BoolField {}

message BytesField {}

message DecimalField {
  Rules rules = 1;
  message Rules {
    optional string minimum = 1;
    optional string maximum = 2;
    optional bool exclusive_minimum = 3;
    optional bool exclusive_maximum = 4;
  }
}

message DateField {
  Rules rules = 1;
  message Rules {
    optional string minimum = 1;
    optional string maximum = 2;
    optional bool exclusive_minimum = 3;
    optional bool exclusive_maximum = 4;
  }
}

message TimestampField {}

message KeyField {
  oneof type {
    Format format = 1;
    string pattern = 2; // custom with pattern.
  }
  enum Format {
    FORMAT_UNSPECIFIED = 0; // informal
    FORMAT_UUID = 2;
    FORMAT_ID62 = 3;
  }
  j5.schema.v1.EntityRef foreign = 3;
}
